kubernetes/go-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-challenge
spec:
  replicas: 1
  selector:
    matchLabels:
      app: go-challenge
  template:
    metadata:
      labels:
        app: go-challenge
    spec:
      containers:
        - name: go-challenge
          image: gps1mx/go-challenge:1
          ports:
            - name: http
              containerPort: 8080
          imagePullPolicy: Always
