kubernetes/go-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-challenge
spec:
  selector:
    app: go-challenge
  type: LoadBalancer
  ports:
    - protocol: "TCP"
      port: 8080
      targetPort: 8080
